# Co-AI-RedTeam

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: demo.html
src/co_redteam/: __init__.py  cli.py  config.py  orchestrator.py
src/co_redteam/agents/: __init__.py  analysis.py  base.py  critique.py  evaluator.py  executor.py  patcher.py  planner.py  validator.py
src/co_redteam/memory/: __init__.py  schemas.py  store.py
src/co_redteam/reporting/: __init__.py  markdown.py  sarif.py
test_targets/: run_scan.py
test_targets/vulnerable_app/: app.py
tests/: __init__.py  test_agents.py  test_config.py  test_memory.py  test_reporting.py
